# secret-santa-mail-service

./: Dockerfile  README.md  pyproject.toml
app/: app.py  mail_service_exception.py  message_category.py  settings.py  util.py
