[tool.poetry]
name = "secret-santa-mail-service"
version = "0.1.0"
description = ""
authors = ["Saklavi <endero238@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.2"
mailtrap = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
